					  And revive with 1 HP / 1 SP at the place of your death.
				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2010/07/30
	* Rev. 14367 Added two new monster mercenaries. [L0ne_W0lf]
	- Added information for the three new mercenary skills.
	- Added mercenary skills with cast times to castnodex.
2010/07/27
	* Rev. 14365 Updated entry for npc_randomattack in the skill database, now uses the newly added -3 element. [L0ne_W0lf]
2010/07/16
	* Rev. 14364 Added two new item groups, and implemented the remaining in the item database. [L0ne_W0lf]
2010/07/10
	* Rev. 14363 Fixed a typo in item db. [Inkfish]
2010/07/05
	* Rev. 14361 Fixed some typos in item db! [Inkfish]
2010/06/27
	* Rev. 14358 Fixed Bubble Gum again. (200 = +100%, 300 = +200%, etc.) [L0ne_W0lf]
2010/06/27
	* Rev. 14356 Corrected a view ID and an equip location in the item database. (bugreport:4330) [L0ne_W0lf]
2010/06/21
	* Rev. 14352 Minor item database bug fixes! [L0ne_W0lf]
	- Corrected some lower headgears being able to be refined. (bugreport:4328) 
	- Fixed wrong view ids for crown of deceit and musical note headband. (bugreport:4328) 
2010/06/11
	* Rev. 14342 Added updated 13.2 drops to existing monsters. (Most rates are unknown, and set to 0.1%) [L0ne_W0lf]
	* And time to squish database bug reports!
	- Fixed guild event quest log entry time limit. (Bugreport:4204)
	- Fixed Musika healing while attacking and not when attacked. (Bugreport:4211)
	- Corrected the Int and HP/SP reduction on the Dead Tree Cane. (Bugreport:4217)
	- Fixed the non-set bonus for Glorious Ring's heal increase. (Bugreport:4223)
	- Fixed Death Guidance not casting NPC_HELLPOWER on the user. (Bugreport:4250)