@@ -4,6 +4,13 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2010/08/16
+	* Rev. 14378 Attempting to tackle, and fix some simple errors in skills. [L0ne_W0lf]
+	- Stormgust hit counter no longer resets under new casts of stormgust.
+	- RG_STEALCOIN will now cause the monster to aggro player on success. (bugreport:3547)
+	- SL_WIZARD will now consume one crystal fragement per reflected hit. (bugreport:3603)
+	- WZ_FROSTNOVA will now ignore targets in area that are already frozen. (bugreport:3980)
+	- SL_KAAHI will no longer uses SP if player has full health already. (bugreport:3918)
+	- CG_TAROTCARD "The Lovers" will heal source player instead of target. (bugreport:4171)
 	* Merged Shinryo's patch which speeds up map-cache loading (with a few changes, see eA forum thread #253218 for details) [Skotlex]
 2010/08/14
 	* Rev. 14373 Quest log kill count now updated properly. (Added from topic 253813) [L0ne_W0lf]
